# cardano-tools

./: .README.md.swp  LICENSE  README.md  craco.config.js  eternl-debug-c2b4e67e73f4c28a81c8cf5c71fa45dfa8560cbfd3d3aea69f60f709ca106590-unsigned.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vote-metadata-bad-example.json  vote-metadata-example-1.json  vote-metadata-example-2.json
LittleBoy/: part_1.py  part_2.py  setup.json  state.json
wiki/raw/blockfrost-platform-main/: .editorconfig  .gitignore  .yamllint.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  deny.toml  docker-compose.yml  flake.nix  rustfmt.toml
wiki/raw/blockfrost-platform-main/.cargo/: audit.toml
wiki/raw/blockfrost-platform-main/.github/: check-action-pins.sh
wiki/raw/blockfrost-platform-main/.github/workflows/: ci.yaml  release.yml  update-flake-lock.yml
wiki/raw/blockfrost-platform-main/crates/api_provider/: Cargo.toml
wiki/raw/blockfrost-platform-main/crates/api_provider/src/: types.rs
wiki/raw/blockfrost-platform-main/crates/build_utils/: Cargo.toml
wiki/raw/blockfrost-platform-main/crates/build_utils/src/: git.rs  lib.rs  testgen_hs.rs
wiki/raw/blockfrost-platform-main/crates/common/: Cargo.toml  build.rs
wiki/raw/blockfrost-platform-main/crates/common/src/: accounts.rs  addresses.rs  assets.rs  blocks.rs  cardano_keys.rs  cli.rs  config.rs  crates.rs  dreps.rs  epochs.rs  errors.rs  find_libexec.rs  genesis.rs  hydra.rs  json_client.rs  lib.rs  metadata.rs  pagination.rs  payment_cred.rs  pools.rs  tcp_mux_tunnel.rs  tracing.rs  txs.rs  types.rs  validation.rs
wiki/raw/blockfrost-platform-main/crates/data_node/: Cargo.toml
wiki/raw/blockfrost-platform-main/crates/data_node/src/: api.rs  client.rs  lib.rs  node_monitor.rs
wiki/raw/blockfrost-platform-main/crates/data_node/src/api/: accounts.rs  addresses.rs  assets.rs  blocks.rs  epochs.rs  genesis.rs  governance.rs  health.rs  metadata.rs  network.rs  pools.rs  root.rs  txs.rs
wiki/raw/blockfrost-platform-main/crates/gateway/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  do-dev.yml
wiki/raw/blockfrost-platform-main/crates/gateway/config/: development.toml  production.toml
wiki/raw/blockfrost-platform-main/crates/gateway/migrations/2024-08-12-160334_create_requests_table/: up.sql
wiki/raw/blockfrost-platform-main/crates/gateway/migrations/2024-08-12-160423_create_users_table/: up.sql
wiki/raw/blockfrost-platform-main/crates/gateway/migrations/2024-11-04-191250_create_user_id_key/: down.sql  up.sql
wiki/raw/blockfrost-platform-main/crates/gateway/migrations/2024-11-04-232732_alter-user-id/: down.sql  up.sql
wiki/raw/blockfrost-platform-main/crates/gateway/migrations/2025-01-30-130646_alter-requests-table/: down.sql  up.sql
wiki/raw/blockfrost-platform-main/crates/gateway/src/: blockfrost.rs  config.rs  db.rs  errors.rs  lib.rs  load_balancer.rs  main.rs  models.rs  payload.rs  rate_limit.rs  schema.rs  sdk_bridge_ws.rs  types.rs
wiki/raw/blockfrost-platform-main/crates/gateway/src/api/: mod.rs  register.rs  root.rs
wiki/raw/blockfrost-platform-main/crates/gateway/src/hydra_server_bridge/: mod.rs  verifications.rs
wiki/raw/blockfrost-platform-main/crates/gateway/src/hydra_server_platform/: mod.rs  verifications.rs
wiki/raw/blockfrost-platform-main/crates/integration_tests/: Cargo.toml
wiki/raw/blockfrost-platform-main/crates/integration_tests/src/: lib.rs
wiki/raw/blockfrost-platform-main/crates/integration_tests/src/gateway/: mod.rs
wiki/raw/blockfrost-platform-main/crates/integration_tests/src/platform/: asserts.rs  mock_data_node.rs  mod.rs  tx_builder.rs
wiki/raw/blockfrost-platform-main/crates/integration_tests/tests/: e2e_websocket.rs  gateway_load_balancer.rs  gateway_rate_limit.rs  platform_data_node.rs  platform_icebreakers.rs  platform_metrics.rs  platform_root.rs  platform_submit.rs  tcp_mux_tunnel.rs
wiki/raw/blockfrost-platform-main/crates/integration_tests/tests/data/: ignored_tests.json  supported_endpoints.json
wiki/raw/blockfrost-platform-main/crates/node/: Cargo.toml  build.rs
wiki/raw/blockfrost-platform-main/crates/node/src/: cbor.rs  connection.rs  lib.rs  monitoring.rs  pool.rs  pool_manager.rs  sync_progress.rs  transactions.rs
wiki/raw/blockfrost-platform-main/crates/node/src/cbor/: fallback_decoder.rs  tests.rs  validation.rs
wiki/raw/blockfrost-platform-main/crates/platform/: Cargo.toml
wiki/raw/blockfrost-platform-main/crates/platform/src/: api.rs  health_monitor.rs  lib.rs  load_balancer.rs  main.rs  server.rs
wiki/raw/blockfrost-platform-main/crates/sdk_bridge/: Cargo.toml
wiki/raw/blockfrost-platform-main/crates/sdk_bridge/src/: config.rs  http_proxy.rs  main.rs  protocol.rs  types.rs  ws_client.rs
wiki/raw/blockfrost-platform-main/docker/: dolos-config.toml.tpl  dolos-entrypoint.sh  generate-dolos-config.sh  mithril-entrypoint.sh
wiki/raw/blockfrost-platform-main/docs/: .gitignore  README.md  eslint.config.js  mdx-components.ts  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
wiki/raw/blockfrost-platform-main/docs/src/: styles.css
wiki/raw/blockfrost-platform-main/docs/src/app/: layout.tsx
wiki/raw/blockfrost-platform-main/docs/src/components/: Logo.tsx
wiki/raw/blockfrost-platform-main/docs/src/content/: _meta.js  budget.mdx  configuration.mdx  data-node.mdx  faq.mdx  get-started.mdx  icebreakers.mdx  index.mdx  options.md  roadmap.mdx  usecases.mdx  verification.md
wiki/raw/blockfrost-platform-main/nix/: devshells.nix
wiki/raw/blockfrost-platform-main/nix/internal/: curl-bash-install.sh  darwin-launcher.sh  darwin-terminal-init.sh  darwin.nix  dmgbuild--tmp-mount-root.diff  hydra-blockfrost-test.sh  hydra-bridge-gateway-test.sh  hydra-platform-gateway-test.sh  linux.nix  midnight--wasm-opt-sys--darwin.patch  tx-build.sh  unix.nix  windows-installer.nsi  windows-libpq.nix  windows-uninstaller.nsi  windows.nix
wiki/raw/blockfrost-platform-main/nix/internal/homebrew-tap/: README.md
wiki/raw/blockfrost-platform-main/nix/nixos/: blockfrost-platform.nix  module-list.nix
(+449 files in other folders)
