[workspace.package]
version = "1.0.0-rc.1"
license = "Apache-2.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
  "crates/platform",
  "crates/build_utils",
  "crates/common",
  "crates/api_provider",
  "crates/node",
  "crates/data_node",
  "crates/gateway",
  "crates/sdk_bridge",
  "crates/integration_tests",
]
default-members = ["crates/platform"]

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
bech32 = "0.11.1"
blake3 = "1"
bytes = "1"
blockfrost-platform = { path = "crates/platform", package = "blockfrost-platform" }
blockfrost-gateway = { path = "crates/gateway", package = "blockfrost-gateway" }
bf-api-provider = { path = "crates/api_provider", package = "blockfrost-platform-api-provider" }
bf-build-utils = { path = "crates/build_utils", package = "blockfrost-platform-build-utils" }
bf-common = { path = "crates/common", package = "blockfrost-platform-common" }
bf-data-node = { path = "crates/data_node", package = "blockfrost-platform-data-node" }
bf-node = { path = "crates/node", package = "blockfrost-platform-node" }
bip39 = "2.2.2"
blockfrost = { version = "1.2.3", default-features = false, features = [
  "native-tls",
] }
blockfrost-openapi = "0.1.87"
bzip2 = "0.6.1"
cardano-serialization-lib = "15.0.3"
chrono = "0.4"
clap = { version = "4.5.59", features = ["derive"] }
colored = "2.1.0"
crossbeam = "0.8"
deadpool = "0.13.0"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.3", features = ["chrono", "postgres"] }
diesel_migrations = "2"
dirs = "6.0.0"
dotenvy = "0.15.7"
futures = "0.3"
futures-util = "0.3"
getrandom = "0.3"
hex = "0.4.3"
hyper = "1.8.1"
inquire = "0.9"
jemalloc = "0.3"
machine-uid = "0.5"
metrics = { version = "0.24.3", default-features = false }
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }
metrics-process = "2.4.3"
nix = { version = "0.30", default-features = false, features = ["signal"] }
ntest = "0.9.5"
num_cpus = "1"
# FIXME: use a proper Pallas release after they merge <https://github.com/txpipe/pallas/pull/624>:
pallas-addresses = { git = "https://github.com/txpipe/pallas.git", rev = "ed422bc0d5a09f77617d4882dd4c71089a8bcdb2" }
pallas-codec = { git = "https://github.com/txpipe/pallas.git", rev = "ed422bc0d5a09f77617d4882dd4c71089a8bcdb2" }
pallas-crypto = { git = "https://github.com/txpipe/pallas.git", rev = "ed422bc0d5a09f77617d4882dd4c71089a8bcdb2" }
pallas-hardano = { git = "https://github.com/txpipe/pallas.git", rev = "ed422bc0d5a09f77617d4882dd4c71089a8bcdb2" }
pallas-network = { git = "https://github.com/txpipe/pallas.git", rev = "ed422bc0d5a09f77617d4882dd4c71089a8bcdb2" }
pallas-primitives = { git = "https://github.com/txpipe/pallas.git", rev = "ed422bc0d5a09f77617d4882dd4c71089a8bcdb2" }
pallas-traverse = { git = "https://github.com/txpipe/pallas.git", rev = "ed422bc0d5a09f77617d4882dd4c71089a8bcdb2" }
pretty_assertions = "1.4.1"
proptest = "1.10.0"
rand = "0.8.5"
reqwest = { version = "0.13.2", default-features = false, features = [
  "blocking",
  "http2",
  "json",
  "native-tls",
] }
rstest = "0.26.1"
sentry = "0.46.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "~0.37"
tar = "0.4.44"
thiserror = "2.0.18"
governor = "0.10.4"
tokio = { version = "1.49.0", features = [
  "rt",
  "rt-multi-thread",
  "signal",
  "process",
] }
tokio-tungstenite = "0.28.0"
tokio-util = "0.7"
toml = "1.0.2"
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["normalize-path"] }
tracing = "0.1.44"
tracing-journald = "0.3.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tungstenite = "0.28.0"
twelf = { version = "0.15.0", features = ["clap", "toml"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
zip = "8.1.0"

[workspace.metadata.cargo-shear]
ignored = ["jemalloc"] # musl-only conditional dependency

[workspace.lints.clippy]
uninlined_format_args = "deny"
