[package]
name = "blockfrost-platform-node"
version.workspace = true
license.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
bf-common.workspace = true
serde.workspace = true
tracing.workspace = true
crossbeam.workspace = true
hex.workspace = true
serde_json.workspace = true
tokio.workspace = true
pallas-network.workspace = true
deadpool.workspace = true
sysinfo.workspace = true
num_cpus.workspace = true
metrics.workspace = true
pallas-hardano.workspace = true
pallas-crypto.workspace = true
pallas-traverse.workspace = true
pallas-codec.workspace = true
pallas-primitives.workspace = true
chrono.workspace = true

[build-dependencies]
bf-build-utils.workspace = true

[features]
tarpaulin = []

[lints]
workspace = true
