[package]
name = "blockfrost-platform"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "The Blockfrost platform transforms your Cardano node infrastructure into a high-performance JSON API endpoint."
homepage = "https://platform.blockfrost.io"
repository = "https://github.com/blockfrost/blockfrost-platform"
build = "build.rs"

[dependencies]
bf-common.workspace = true
bf-node.workspace = true
bf-data-node.workspace = true
bf-api-provider.workspace = true

axum.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
futures-util.workspace = true
tungstenite = { workspace = true, features = ["native-tls"] }
tokio-tungstenite = { workspace = true, features = ["native-tls"] }
tracing.workspace = true
serde.workspace = true
hyper.workspace = true
tower-http.workspace = true
tower.workspace = true
serde_json.workspace = true
sentry.workspace = true
base64.workspace = true
reqwest.workspace = true
pallas-network.workspace = true
pallas-addresses.workspace = true
pallas-codec.workspace = true
hex.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
metrics-process.workspace = true
chrono.workspace = true
dotenvy.workspace = true
uuid.workspace = true
dirs.workspace = true
anyhow.workspace = true

[dev-dependencies]
bf-api-provider.workspace = true
rstest.workspace = true
proptest.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[target.'cfg(target_env = "musl")'.dependencies]
jemalloc.workspace = true

[build-dependencies]
bf-build-utils.workspace = true

[package.metadata.cargo-shear]
ignored = ["jemalloc"] # musl-only conditional dependency

[lints]
workspace = true
